Fixes issues with Firefox and stretching logo

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html,body{min-height:100%}
 
 .AR {
     margin-top: 3px;
-    height: 90%;
+    height: 58px;
     width: auto;
 }
 
